[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Fuentes/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Fuentes/Fuente_MP.tres" type="DynamicFont" id=2]
[ext_resource path="res://Escenas/Parallax_Bg_Menu_Inicio.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Control_Menu_Ini.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu_Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxBotones" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -61.0
margin_right = 235.0
margin_bottom = 203.0
custom_constants/separation = 50

[node name="Btn_Jugar" type="Button" parent="VBoxBotones"]
margin_right = 470.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Jugar"

[node name="Btn_Puntaje" type="Button" parent="VBoxBotones"]
margin_top = 102.0
margin_right = 470.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 1 )
text = "Puntaje"

[node name="Btn_Ajustes" type="Button" parent="VBoxBotones"]
margin_top = 204.0
margin_right = 470.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "Ajustes"

[node name="Sprite" type="Sprite" parent="VBoxBotones"]

[node name="Sprite2" type="Sprite" parent="VBoxBotones"]
position = Vector2( -1, -1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxBotones/Btn_Jugar" to="." method="_on_Btn_Jugar_pressed"]
[connection signal="pressed" from="VBoxBotones/Btn_Puntaje" to="." method="_on_Btn_Puntaje_pressed"]
[connection signal="pressed" from="VBoxBotones/Btn_Ajustes" to="." method="_on_Btn_Ajustes_pressed"]
